<resources>
    <string name="app_name">CryptoCalculator</string>
    <string name="title_markets">Markets</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_notifications">Notifications</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bitcoincash">Bitcoin Cash</string>
    <string name="ethereum">Ethereum</string>
    <string name="litecoin">Litecoin</string>
    <string name="bitcoin_data">BTC\n\n$\n€</string>
    <string name="bitcoincash_data">BCH\n\n$\n€</string>
    <string name="ethereum_data">ETH\n\n$\n€</string>
    <string name="litecoin_data">LTC\n\n$\n€</string>
    <string name="bitcoin_abbrv">BTC</string>
    <string name="bitcoincash_abbrv">BCH</string>
    <string name="ethereum_abbrv">ETH</string>
    <string name="litecoin_abbrv">LTC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>