<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sachinjain.cryptocalculator.MarketsFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/centerVerticalShim"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

        <View
            android:id="@+id/centerHorizontalShim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/BTC_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/centerVerticalShim"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/centerHorizontalShim"
            android:background="@color/btc"
            android:gravity="center"
            android:text="@string/bitcoin_data"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="28dp">
        </TextView>

        <TextView
            android:id="@+id/BCH_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/centerVerticalShim"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/centerHorizontalShim"
            android:background="@color/bch"
            android:gravity="center"
            android:text="@string/bitcoincash_data"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="28dp">
        </TextView>

        <TextView
            android:id="@+id/ETH_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/centerVerticalShim"
            android:layout_toLeftOf="@+id/centerHorizontalShim"
            android:background="@color/eth"
            android:gravity="center"
            android:text="@string/ethereum_data"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="28dp">
        </TextView>

        <TextView
            android:id="@+id/LTC_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/centerVerticalShim"
            android:layout_toRightOf="@+id/centerHorizontalShim"
            android:background="@color/ltc"
            android:gravity="center"
            android:text="@string/litecoin_data"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="28dp">
        </TextView>

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Refresh"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="#ff6961"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </RelativeLayout>


</FrameLayout>