<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sachinjain.cryptocalculator.CalculatorFragment"
    android:id="@+id/background"
    android:background="@color/btc"
    android:weightSum = "1">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#a9a9a9"
        android:gravity="center">

        <Button
            android:id="@+id/BTC_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/btc"
            android:text="@string/bitcoin_abbrv"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BCH_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/BTC_button"
            android:background="@color/bch"
            android:text="@string/bitcoincash_abbrv"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ETH_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/BCH_button"
            android:background="@color/eth"
            android:text="@string/ethereum_abbrv"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/LTC_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ETH_button"
            android:background="@color/ltc"
            android:text="@string/litecoin_abbrv"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ToggleButton
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textOn="EURO"
            android:textOff="DOLLAR"
            android:id="@+id/toggle_currency"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintVertical_bias="0.24" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint='Coin Quantity'
            android:inputType="numberDecimal"
            android:id="@+id/coinquantity"
            android:drawableLeft="@drawable/ic_bitcoin"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.25" />
        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint='Buy Price'
            android:inputType="numberDecimal"
            android:id="@+id/buyprice"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.4"/>
        <!--<Button-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:text="Current Price"-->
        <!--android:background="#ff6961"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textStyle="bold"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.1"-->
        <!--app:layout_constraintVertical_bias="0.4"/>-->
        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint='Sell Price'
            android:id="@+id/sellprice"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.55"/>
        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint='Transaction Fees'
            android:id="@+id/fees"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.7"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="Current Price"
            android:background="#7A7677"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/current_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintVertical_bias="0.55"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="Clear"
            android:background="#7A7677"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/clear_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintVertical_bias="0.4"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="Calculate"
            android:background="#7A7677"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintVertical_bias="0.7"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text=""
            android:id="@+id/calculation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.9"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30dp"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
